Adjusted the menu a little so it doesn't look so broken on the left side. I still have an issue in chrome where the screen won't scroll down after the menu is closed. it's odd

--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,16 @@ p{
 header {
     background: #333;
     position: fixed;
+    transition: 500ms ease all;
+    -webkit-transition: 500ms ease all;
     width: 100%;
     z-index: 10;
+}
+.nav-open header {
+    transform: translateX(25%);
+    transform: translate3d(25%, 0, 0);
+    -webkit-transform: translateX(25%);
+    -webkit-transform: translate3d(25%, 0, 0);
 }
 header button {
     background: #333;
@@ -99,7 +107,6 @@ header button:focus{
     background: #555;
     height: 100vh;
     left: -25%;
-    margin-top: 50px;
     position: fixed;
     width: 25%;
     transition: 500ms ease all;
@@ -141,7 +148,7 @@ header button:focus{
     color: #FFF;
     display: block;
     font-size: 1.5em;
-    padding: 15px 5px;
+    padding: 10px 5px;
     width: 100%;
 }
 .nav-container a:hover,
@@ -338,7 +345,7 @@ header button:focus{
         left: -50%;
         width: 50%;
     }
-    .nav-open .site-section {
+    .nav-open header, .nav-open .site-section {
         transform: translateX(50%);
         transform: translate3d(50%, 0, 0);
         -webkit-transform: translateX(50%);
@@ -351,7 +358,7 @@ header button:focus{
         left: -35%;
         width: 35%;
     }
-    .nav-open .site-section {
+    .nav-open header, .nav-open .site-section {
         transform: translateX(35%);
         transform: translate3d(35%, 0, 0);
         -webkit-transform: translateX(35%);
